<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBF2C0"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/playBtn"
        android:layout_width="145dp"
        android:layout_height="65dp"
        android:background="@drawable/ripple"
        android:text="@string/play"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FBF2C0"
        android:text="@string/_8_puzzle_game"
        android:textColor="#48392A"
        android:textColorHighlight="#4A412B"
        android:textColorHint="#48392A"
        android:textColorLink="#48392A"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="169dp"
        android:layout_height="36dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#48392A"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/playBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="270dp"
        android:layout_height="38dp"
        android:text="@string/How"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#48392A"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/playBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="41dp"
        android:layout_height="22dp"
        android:text="@string/Preview2"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#48392A"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/playBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.648" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="41dp"
        android:layout_height="22dp"
        android:text="@string/Preview3"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#48392A"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/playBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.858" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="41dp"
        android:layout_height="22dp"
        android:text="@string/Preview"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#48392A"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/playBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.419" />

</androidx.constraintlayout.widget.ConstraintLayout>