<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".Game">

    <TextView
        android:id="@+id/playerState"
        android:layout_width="195dp"
        android:layout_height="39dp"
        android:text="@string/you_are_solving"
        android:textAlignment="center"
        android:textColor="@color/brown"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.171" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="96dp"
        android:layout_height="53dp"
        android:text="@string/reset"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="260dp"
        android:layout_height="288dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318">

        <Button
            android:id="@+id/button1"
            android:layout_width="77dp"
            android:layout_height="87dp"
            android:layout_margin="5dp"
            android:text="@string/_1"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/button2"
            android:layout_width="77dp"
            android:layout_height="87dp"
            android:layout_margin="5dp"
            android:text="@string/button"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/button3"
            android:layout_width="77dp"
            android:layout_height="87dp"
            android:layout_margin="5dp"
            android:text="@string/button"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/button4"
            android:layout_width="77dp"
            android:layout_height="87dp"
            android:layout_margin="5dp"
            android:text="@string/button"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/button5"
            android:layout_width="77dp"
            android:layout_height="87dp"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:text="@string/button"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button6"
            android:layout_width="77dp"
            android:layout_height="87dp"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:text="@string/button"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/button7"
            android:layout_width="77dp"
            android:layout_height="87dp"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:text="@string/button"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button8"
            android:layout_width="77dp"
            android:layout_height="87dp"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:text="@string/button"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/button0"
            android:layout_width="77dp"
            android:layout_height="87dp"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:text="@string/button"
            app:layout_column="2"
            app:layout_row="2" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>